# factory-plan-optimizer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
backend/api/: pyproject.toml
backend/api/src/factory_plan_api/: __init__.py  app.py  config.py  default_data.py  dtos.py  explorer.py  jobs.py  problem.py
backend/api/tests/: test_api.py  test_boundaries.py  test_explorer.py  test_jobs.py
backend/api/tests/fixtures/: curated-default.factory-data.json
backend/game-data-extractor/: pyproject.toml
backend/game-data-extractor/src/game_data_extractor/: __init__.py  __main__.py  data_raw_normalization.py  dump_data.py  dump_data_cli.py  save_settings.py
backend/game-data-extractor/src/game_data_extractor/data_contracts/: __init__.py  dataset.py  factory_data.py  milestones.py  parsing.py  planning_adapter.py  provenance_models.py  provenance_parsing.py  recipe_models.py  technology_graph.py
backend/game-data-extractor/tests/: test_boundaries.py  test_contract_roundtrip.py  test_data_raw_normalization.py  test_dump_data.py  test_export_factory_data_cli.py  test_milestones.py  test_report_cli.py  test_save_settings.py
backend/game-data-extractor/tests/fixtures/data_raw/: minimal-py-like-data-raw.json
backend/game-data-extractor/tests/fixtures/save_settings/malformed-save/: save-settings.json
backend/game-data-extractor/tests/fixtures/save_settings/minimal-save/: save-settings.json
backend/optimizer-core/: pyproject.toml
backend/optimizer-core/src/factory_plan_optimizer/: __init__.py  __main__.py  dump_data.py  dump_data_cli.py  import_dataset_models.py  import_models.py  import_types.py  planning.py  save_settings.py
backend/optimizer-core/src/factory_plan_optimizer/optimizer/: __init__.py  cluster_diagnostics.py  factory_data_loader.py  global_recipe_lp.py  models.py  optimized_clustering.py  sparse_boundary.py  sparse_clustering.py  sparse_engines.py  sparse_graph.py  sparse_partition.py
backend/optimizer-core/tests/: paths.py  test_data_raw_normalization.py  test_domain_models.py  test_dump_data.py  test_factory_data_loader.py  test_global_recipe_lp.py  test_milestones.py  test_optimized_clustering.py  test_optimizer_boundary.py  test_planning.py  test_save_settings.py  test_sparse_clustering.py  test_sparse_partition.py  test_toy_iron_example.py
backend/optimizer-core/tests/fixtures/: invalid_negative_output.json
backend/optimizer-core/tests/fixtures/milestones/: minimal-milestones.json
data/: README.md
docs/: code-hygiene-decisions.md  code_hygiene_backlog.md  data_interface.md  importer_workflow.md  mathematical_model.md  sparse_graph_clustering.md
examples/data/: toy_iron.factory-data.json
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
frontend/scripts/: check-boundaries.mjs
frontend/src/: main.tsx
frontend/src/api/: client.ts  dtos.ts
frontend/src/domain/: clusterDiagnostics.test.ts  clusterDiagnostics.ts  explorerState.ts  itemDisplay.ts  optimizedClustering.test.ts  optimizedClustering.ts  problemState.test.ts  problemState.ts  rawInputCatalog.test.ts  rawInputCatalog.ts  solveOutcome.test.ts  solveOutcome.ts  solveResultFlow.test.ts  solveResultFlow.ts  solveResultVisualGraph.test.ts  solveResultVisualGraph.ts  sparseClustering.test.ts  sparseClustering.ts
frontend/src/ui/: App.test.tsx  App.tsx  ExplorerPanel.tsx  RawInputReviewPanel.test.tsx  RawInputReviewPanel.tsx  rawInputStorage.test.ts  styles.css
frontend/src/ui/solve-result/: ClusterDiagnosticsPanel.tsx  FlowGraph.test.tsx  FlowGraph.tsx  NodeDetails.tsx  OptimizedClusteringPanel.test.tsx  OptimizedClusteringPanel.tsx  RawResultTables.tsx  SolveResultPanel.test.tsx  SolveResultPanel.tsx  SparseBoundaryItemReviewPanel.test.tsx  SparseBoundaryItemReviewPanel.tsx  SparseClusteringPanel.test.tsx  SparseClusteringPanel.tsx  flowLayout.test.ts  flowLayout.ts
interview/: game-data-extractor-refactor.md
schemas/: factory_data.schema.json
src/factory_plan_optimizer/: __main__.py  data_raw_normalization.py  dump_data.py  import_parsing.py  import_provenance_models.py  import_provenance_parsing.py  import_recipe_models.py  milestones.py
tests/: test_data_raw_normalization.py  test_domain_models.py  test_dump_data.py  test_package_smoke.py  test_report_cli.py  test_save_settings.py
tests/fixtures/data_raw/: malformed-data-raw.json
tests/fixtures/milestones/: unknown-tech.json
