[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "factory-plan-optimizer"
version = "0.1.0"
description = "Experimental hierarchical factory-planning optimizer scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
factory-plan-optimizer = "factory_plan_optimizer.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pytest>=8.4",
    "ruff>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/factory_plan_optimizer"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--ignore=.codegraph",
    "--ignore=.omo",
    "--ignore=.venv",
]
filterwarnings = ["error"]
norecursedirs = [
    ".codegraph",
    ".git",
    ".mypy_cache",
    ".omo",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D103",
    "D104",
    "D203",
    "D213",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"src/factory_plan_optimizer/import_*.py" = [
    "D101",
    "D102",
    "D105",
]
"src/factory_plan_optimizer/save_settings.py" = [
    "D101",
    "D102",
    "D105",
]
"src/factory_plan_optimizer/dump_data.py" = [
    "D101",
    "D102",
    "D105",
    "S603",
]
"src/factory_plan_optimizer/dump_data_cli.py" = [
    "D101",
    "D102",
]
"tests/**/*.py" = [
    "D",
    "S101",
    "S603",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"
