[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "factory-plan-api"
version = "0.1.0"
description = "FastAPI boundary for the factory plan optimizer."
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
    "factory-plan-optimizer",
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "mypy>=1.18",
    "pytest>=8.4",
    "ruff>=0.13",
]

[tool.uv.sources]
factory-plan-optimizer = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/factory_plan_api"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "factory_plan_optimizer.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = [
    "error",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "EM101",
    "EM102",
    "D203",
    "D213",
    "ISC001",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"
