[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "game-data-extractor"
version = "0.1.0"
description = "Factorio game data extraction contracts and workflows."
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
game-data-extractor = "game_data_extractor.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pytest>=8.4",
    "ruff>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/game_data_extractor"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D100", "D103", "D104", "D203", "D213", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"src/game_data_extractor/data_contracts/*.py" = ["D101", "D102", "D105"]
"src/game_data_extractor/dump_data.py" = ["D101", "D102", "D105", "S603"]
"src/game_data_extractor/save_settings.py" = ["D101", "D102", "D105"]
"tests/**/*.py" = ["D", "S101"]
"tests/test_dump_data.py" = ["D", "S101", "S603"]
"tests/test_save_settings.py" = ["D", "S101", "S603"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"
